# tiralabra

./: .coveragerc  .gitignore  README.md  pyproject.toml  tasks.py
data/: generated.midi
dokumentaatio/: Viikkoraportti_1.md  Viikkoraportti_2.md  Viikkoraportti_3.md  Viikkoraportti_4.md  Viikkoraportti_5.md  Viikkoraportti_6.md  kaytto-ohje.md  maarittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md
src/: main.py  performance_test.py
src/markovchain/: markovchain.py
src/midi/: midi.py
src/tests/: generate_music_test.py  hundred_notes.mid  markovchain_test.py  midi_test.py  ode_to_joy.midi  ten_notes.mid  test2.midi  trie_test.py
src/trie/: generate_music.py  trie.py
src/ui/: ui.py
