[tool.poetry]
name = "tiralabra"
version = "0.1.0"
description = ""
authors = ["Petteri Huvio <petteri.huvio@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^2.0.0"
numpy = "^1.24.1"
music21 = "^8.1.0"
nltk = "^3.8.1"
pretty-midi = "^0.2.9"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
coverage = "^7.1.0"
pylint = "^2.15.10"
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
